# module-gnu-java

./: Makefile.am  README  RELEASE-NOTES  configure.ac  qore-gcj-module.spec  qore-gnu-java-module.spec
docs/: gcj-module-doc.html  gnu-java-module.html
src/: Makefile.am  gcj-module.cpp  gcj-module.h  gcj-util.cpp  gcj-util.h  gnu-java-module.cpp  gnu-java-module.h  gnu-java-util.cpp  gnu-java-util.h  single-compilation-unit.cpp
test/: apache-xmlrpc-test.q  gnu-java-test.q
